compiler/framework/test/fail/bad_for_loop.cvc
// For-loop needs two or three arguments.


export int main() {
    for (int i = 0, 5, 9, 1) {}

    return 0;
}
